# SlackAgent

./: Makefile  README.md  deploy.py  pyproject.toml
archer/: constants.py  defaults.py  env.py  server.py  utils.py
archer/agent/: __init__.py  agent.py  constants.py  helpers.py  utils.py
archer/listeners/: __init__.py  utils.py
archer/listeners/actions/: __init__.py  auth_complete.py  auth_complete_button.py  user_settings.py
archer/listeners/commands/: __init__.py  command.py
archer/listeners/events/: __init__.py  assistant.py  direct_message.py  home_opened.py  mentioned.py
archer/prompts/: __init__.py  defaults.py
archer/storage/: file.py  functions.py  schema.py
config/: manifest.json
deploy/: modal_deploy.py
