[tool.poetry]
name = "archer-slackbot"
version = "0.1.0"
description = ""
packages = [
    {include="archer", from="."}
]
authors = ["Arcade AI <dev@arcade-ai.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
arcadepy = "~0.0.11"
slack-bolt = "~1.20.1"
arcade-ai = { version = "~0.0.14", extras= ["fastapi"] }
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "~0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^4.0.1"
tox = "^4.11.1"
pytest-asyncio = "^0.23.7"
ruff = "^0.6.0"



[tool.mypy]
files = ["arcade"]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["archer"]

[tool.coverage.report]
skip_empty = true
